last na last commit

--- a/index.html
+++ b/index.html
@@ -166,6 +166,18 @@
             <h2>About Us</h2>
           </div>
           <div class="row content">
+            <div class="col-lg-12 pt-4 pt-lg-12 flip-section" data-about="abtGame">
+              <div class="flipper">
+                <h1>About Game</h1>
+                <p>
+                  All of the cards are laid face down on the screen and two cards are
+                  flipped face up over each turn. The player has to turn over pairs of
+                  matching cards. Click on the cards to flip them and try to remember
+                  the position of each card then you should match each two pairs by
+                  memory.
+                </p>
+              </div>
+            </div>
             <div class="col-lg-12 flip-section" data-about="abtOurStory">
               <div class="flipper">
                 <h1>Our Story</h1>
@@ -179,79 +191,55 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-12 pt-4 pt-lg-12 flip-section" data-about="abtGame">
-              <div class="flipper">
-                <h1>About Game</h1>
-                <p>
-                  All of the cards are laid face down on the screen and two cards are
-                  flipped face up over each turn. The player has to turn over pairs of
-                  matching cards. Click on the cards to flip them and try to remember
-                  the position of each card then you should match each two pairs by
-                  memory.
+          </div>
+        </div>
+      </section>
+      <!-- End About Section -->
+      
+      <!-- ======= Values ======= -->
+      <section id="our-values" class="our-values">
+        <div class="container">
+          <div class="section-title">
+            <h2>Values</h2>
+          </div>
+          <div class="row">
+            <div
+              class="card animated-card animate__animated"
+              style="background-image: url('./assets/img/values/om.jpg')"
+              onclick="toggleActive(this)"
+            >
+              <div class="card-body">
+                <h3 class="card-title">
+                  <a href="#values" class="animated-link" onclick="animateText(this)">
+                    Our Mission
+                  </a>
+                </h3>
+                <p class="card-text" onmouseover="animateText(this)">
+                  Our mission is to craft a lively Emoji Memory Card Game that not only entertains but also challenges players' memory. We aspire to enhance cognitive skills, creating an enjoyable and accessible experience for individuals of all ages in the expressive world of emojis.
+                </p>
+              </div>
+            </div>
+      
+            <div
+              class="card animated-card animate__animated"
+              style="background-image: url('./assets/img/values/op.jpg')"
+              onclick="toggleActive(this)"
+            >
+              <div class="card-body">
+                <h3 class="card-title">
+                  <a href="#values" class="animated-link" onclick="animateText(this)">
+                    Our Plan
+                  </a>
+                </h3>
+                <p class="card-text" onmouseover="animateText(this)">
+                  Our plan is to enhance your gaming adventure. We aim to introduce exciting new expansions, delve into the digital realm, build a vibrant community, and engage players globally. It's more than just a game; it's a comprehensive strategy for providing endless enjoyment and excitement.
                 </p>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!-- End About Section -->
-
-      <!-- ======= Our Values Section ======= -->
-      <section id="our-values" class="our-values">
-        <div class="container">
-          <div class="row"> 
-              <div
-                class="card animated-card animate__animated"
-                style="background-image: url('./assets/img/values/om.jpg')"
-                onclick="toggleActive(this)"
-              >
-                <div class="card-body">
-                  <h3 class="card-title">
-                    <a
-                      href="#values"
-                      class="animated-link"
-                      onclick="animateText(this)"
-                      >Our Mission</i
-                    ></a>
-                  </h3>
-                  <p class="card-text" onmouseover="animateText(this)">
-                    Our mission is to craft a lively Emoji Memory Card Game that
-                    not only entertains but also challenges players' memory. We
-                    aspire to enhance cognitive skills, creating an enjoyable
-                    and accessible experience for individuals of all ages in the
-                    expressive world of emojis.
-                  </p>
-                </div>
-              </div>
-            </div>
-              <div
-                class="card animated-card animate__animated"
-                style="background-image: url('./assets/img/values/op.jpg')"
-                onclick="toggleActive(this)"
-              >
-                <div class="card-body">
-                  <h3 class="card-title">
-                    <a
-                      href="#values"
-                      class="animated-link"
-                      onclick="animateText(this)"
-                      >Our Plan</i
-                    ></a>
-                  </h3>
-                  <p class="card-text" onmouseover="animateText(this)">
-                    Our plan is to enhance your gaming adventure. We aim to
-                    introduce exciting new expansions, delve into the digital
-                    realm, build a vibrant community, and engage players
-                    globally. It's more than just a game; it's a comprehensive
-                    strategy for providing endless enjoyment and excitement.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- End Our Values Section -->
+      <!-- ======= End Values ======= -->
 
       <!-- ======= Team Section ======= -->
       <section id="team" class="team section-bg">
@@ -620,7 +608,7 @@
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>Nueva Ecija University of Science and Technology, Sumacab Campus, Cabanatuan City, 3100 Nueva Ecija</p>
                 </div>
 
                 <div class="email">
@@ -632,7 +620,7 @@
                 <div class="phone">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p>+1 5589 55488 55s</p>
+                  <p>+63 000 0000 000</p>
                 </div>
               </div>
             </div>
@@ -730,8 +718,8 @@
 
       <div class="container footer-bottom clearfix">
         <div class="copyright">
-          &copy; Copyright <strong><span>TECHCARD</span></strong
-          >. All Rights Reserved
+          &copy; Copyright <strong><span><a href="https://www.facebook.com/profile.php?id=61554478390906">TECHCARD</span></strong
+          ></a>. All Rights Reserved
         </div>
       </div>
     </footer>
