--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <ul>
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
             <li><a class="nav-link scrollto" href="#about">About</a></li>
-            <li><a class="nav-link scrollto" href="#our-values">Values</a></li>
+            <li><a class="nav-link scrollto" href="#our-mission">Values</a></li>
             <li><a class="nav-link scrollto" href="#team">Team</a></li>
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           </ul>
@@ -196,50 +196,49 @@
       </section>
       <!-- End About Section -->
       
-      <!-- ======= Values ======= -->
+      <!-- ======= Our Values Section ======= -->
       <section id="our-values" class="our-values">
         <div class="container">
           <div class="section-title">
             <h2>Values</h2>
           </div>
           <div class="row">
-            <div
-              class="card animated-card animate__animated"
-              style="background-image: url('./assets/img/values/om.jpg')"
-              onclick="toggleActive(this)"
-            >
-              <div class="card-body">
-                <h3 class="card-title">
-                  <a href="#values" class="animated-link" onclick="animateText(this)">
-                    Our Mission
-                  </a>
-                </h3>
-                <p class="card-text" onmouseover="animateText(this)">
-                  Our mission is to craft a lively Emoji Memory Card Game that not only entertains but also challenges players' memory. We aspire to enhance cognitive skills, creating an enjoyable and accessible experience for individuals of all ages in the expressive world of emojis.
-                </p>
+            <!-- Left Image -->
+            <div class="col-md-6">
+              <div class="card animated-card animate__animated" style="background-image: url('./assets/img/values/om.jpg');">
+                <div class="card-body">
+                  <h3 class="card-title">
+                    <a href="#mission" class="animated-link">
+                      Our Mission
+                    </a>
+                  </h3>
+                  <p class="card-text padded-text" onmouseover="animateText(this)">
+                    Our mission is to craft a lively Emoji Memory Card Game that not only entertains but also challenges players' memory. We aspire to enhance cognitive skills, creating an enjoyable and accessible experience for individuals of all ages in the expressive world of emojis.
+                  </p>
+                </div>
               </div>
             </div>
-      
-            <div
-              class="card animated-card animate__animated"
-              style="background-image: url('./assets/img/values/op.jpg')"
-              onclick="toggleActive(this)"
-            >
-              <div class="card-body">
-                <h3 class="card-title">
-                  <a href="#values" class="animated-link" onclick="animateText(this)">
-                    Our Plan
-                  </a>
-                </h3>
-                <p class="card-text" onmouseover="animateText(this)">
-                  Our plan is to enhance your gaming adventure. We aim to introduce exciting new expansions, delve into the digital realm, build a vibrant community, and engage players globally. It's more than just a game; it's a comprehensive strategy for providing endless enjoyment and excitement.
-                </p>
+
+            <!-- Right Image -->
+            <div class="col-md-6">
+              <div class="card animated-card animate__animated" style="background-image: url('./assets/img/values/op.jpg');">
+                <div class="card-body">
+                  <h3 class="card-title">
+                    <a href="#plan" class="animated-link">
+                      Our Plan
+                    </a>
+                  </h3>
+                  <p class="card-text padded-text" onmouseover="animateText(this)">
+                    Our plan is to enhance your gaming adventure. We aim to introduce exciting new expansions, delve into the digital realm, build a vibrant community, and engage players globally. It's more than just a game; it's a comprehensive strategy for providing endless enjoyment and excitement.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!-- ======= End Values ======= -->
+      <!-- ======= End Our Values Section ======= -->
+
 
       <!-- ======= Team Section ======= -->
       <section id="team" class="team section-bg">
