--- a/index.html
+++ b/index.html
@@ -191,6 +191,28 @@
                 </p>
               </div>
             </div>
+            <div class="container">
+              <div class="row justify-content-center">
+                <div class="flip-card g-md-6">
+                  <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                      <img src="assets/img/logo.png" alt="TechCard Game" />
+                    </div>
+                    <div class="flip-card-back text-center">
+                      <p>TECHCARD</p>
+                      <hr />
+                      <p style="font-size: m-large; padding-bottom: 140px">
+                        Do You Want To Play The Game?<br />
+                        <a
+                          class="btn btn-primary"
+                          href="https://mijxae02.github.io/TechCard/"
+                          >Play Our Game!</a
+                        >
+                      </p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
